# pandas-timeinterval

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: adjust.py  set_operations.py  solar_power.ipynb  trim.py
pandas_timeinterval/: __init__.py  intervals.py
